2010-08-28  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/env.c: fix for rubinius.

2010-08-28  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/env.c, ext/oci8/error.c, ext/oci8/extconf.rb, ext/oci8/oci8.c,
	  ext/oci8/oci8.h, oci8/oci8lib.c, ext/oci8/ocinumber.c: fix for rubinius.
	    Note that this is not enough to compile ruby-oci8 on it.

2010-08-23  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/object.rb: fix an error when SDO_GEOMETRY is used
	    and $VERBOSE is set.
	* test/test_metadata.rb: (1) fix errors caused by String + Symbol.
	    They worked on ruby 1.9.2 but not on 1.8.7 and 1.9.2.
	    (2) replace "assert_equal(class, object.class)" with
	    "assert_instance_of(class, object)."
	* test/test_oranumber.rb: change a testcase for ruby 1.9.2.
	    Math::atan2(0, 0) behaviour was changed in 1.9.2.

2010-08-15  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/lob.c, ext/oci8/object.c, ext/oci8/oci8.h,
	  lib/oci8/object.rb: support LOB datatypes in Oracle objects.
	* ext/oci8/ocihandle.c: fix SEGV in finalizer when temporary LOBs
	    are used. This bug was introduced by the previous commit.

2010-08-15  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/apiwrap.yml, ext/oci8/lob.c: fix memory leak when temporary
	    lobs are used.

2010-06-15  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/metadata.rb: rename OCI8::Metadata::Column#type_string
	    to #data_type_string and add an alias from the former to the
	    latter. fix a return value of OCI8::Metadata::Column#data_type_string
	    of REF datatype.
	* test/test_metadata.rb: rename a test method test_metadata to
	    test_column_metadata and do refactoring to make test data
	    reusable for other metadata classes in future.

2010-06-13  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/metadata.c: fix a private method
	    OCI8::Metadata::Base#__param to return nil when the specified
	    attribute is NULL.
	* lib/oci8/metadata.rb: add rdoc comment of OCI8::Metadata::Type